new-integration-tests/src/test/resources/istio/istio-gateway-template.service.yaml
# Copyright (c) 2020, Oracle Corporation and/or its affiliates.
# Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gateway
  namespace: NAMESPACE_TO_BE_REPLACED
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - '*'
      port:
        name: http
        number: 80
        protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-virtualservice
  namespace: NAMESPACE_TO_BE_REPLACED
spec:
  gateways:
    - istio-gateway
  hosts:
    - '*'
  http:
    - match:
        - uri:
            prefix: /console
        - port: 7001
      route:
        - destination:
            host: wlstdomain-inpv-wlst-admin-server
            port:
              number: 7001

    - match:
        - uri:
            prefix: /testwebapp
        - port: 7001
      route:
        - destination:
            host: wlstdomain-inpv-cluster-cluster-wlstdomain-inpv.svc.cluster.local
            port:
              number: 8001
