new-integration-tests/src/test/resources/istio/istio-tcp-template.yaml
# Copyright (c) 2020, Oracle Corporation and/or its affiliates.
# Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: DUID-istio-tcp-gateway
  namespace: NAMESPACE
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - '*'
      port:
        name: tcp
        number: TCP_PORT
        protocol: TCP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: DUID-istio-tcp-virtualservice
  namespace: NAMESPACE
spec:
  gateways:
    - DUID-istio-tcp-gateway
  hosts:
    - '*'
  tcp:
    - match:
        - port: TCP_PORT
      route:
        - destination:
            host: ADMIN_SERVICE
            port:
              number: TCP_PORT
